[gd_scene load_steps=19 format=3 uid="uid://f0jqo5i07ilx"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_riksi"]
[ext_resource type="Texture2D" uid="uid://cklvio3iby23j" path="res://assets/sprites/Other/Steps.png" id="2_ago1e"]
[ext_resource type="Texture2D" uid="uid://csggghfx5m080" path="res://assets/sprites/UI/StartMenuUi.png" id="2_cp1jw"]
[ext_resource type="LabelSettings" uid="uid://d0xafy67rfe8g" path="res://resources/labels/title1.tres" id="2_sr5fs"]
[ext_resource type="Theme" uid="uid://cy4ctfdd5em41" path="res://resources/buttons/button_theme.tres" id="3_jex88"]
[ext_resource type="SpriteFrames" uid="uid://drp6wlx62prm8" path="res://assets/sprites/Animals/garganomis/Garganomis.tres" id="5_2ab6e"]
[ext_resource type="FontFile" uid="uid://cu62feaxfcqk8" path="res://assets/fonts/FrederickatheGreat-Regular.ttf" id="5_qj008"]
[ext_resource type="AudioStream" uid="uid://dpox0yxacwbcs" path="res://assets/Sounds/aggresive_goose.mp3" id="5_wla5a"]
[ext_resource type="SpriteFrames" uid="uid://cgwmfc675gf35" path="res://assets/sprites/player.tres" id="6_2iajs"]
[ext_resource type="StyleBox" uid="uid://by586e7gx5rdv" path="res://resources/buttons/new_style_box_texture.tres" id="7_1ysxi"]
[ext_resource type="Texture2D" uid="uid://ce8mkxv2baxkm" path="res://assets/sprites/Other/MoveIcon.png" id="7_6ftc6"]
[ext_resource type="Texture2D" uid="uid://b2btcse5urg53" path="res://assets/sprites/UI/button.png" id="8_0vaqb"]
[ext_resource type="Texture2D" uid="uid://875s1xw1xkow" path="res://assets/sprites/Other/DashKeyIcon.png" id="8_bqtse"]
[ext_resource type="LabelSettings" uid="uid://bn0y2ipsuysdl" path="res://resources/labels/title3.tres" id="9_o84i5"]
[ext_resource type="Texture2D" uid="uid://ol0k8jj34cgk" path="res://assets/sprites/Other/Steps2.png" id="11_1th13"]
[ext_resource type="FontFile" uid="uid://bxidviks1lwgv" path="res://assets/fonts/AveriaSerifLibre-Regular.ttf" id="15_50dkx"]

[sub_resource type="LabelSettings" id="LabelSettings_6q3vm"]
font = ExtResource("5_qj008")
font_size = 120
font_color = Color(0.670588, 0.764706, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0lqv6"]
texture = ExtResource("8_0vaqb")

[node name="start_menu" type="Node"]
process_mode = 3
script = ExtResource("1_riksi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="TextureRect" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cp1jw")

[node name="Title" type="Label" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.228
offset_bottom = -0.240021
grow_horizontal = 2
text = "Gargano Island"
label_settings = ExtResource("2_sr5fs")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.266
anchor_right = 1.0
anchor_bottom = 0.403
offset_top = -0.279999
offset_bottom = -0.240021
grow_horizontal = 2
text = "7.000.000 B.C"
label_settings = SubResource("LabelSettings_6q3vm")
horizontal_alignment = 1

[node name="HamsterSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Background"]
position = Vector2(912, 466)
scale = Vector2(0.2, 0.2)
sprite_frames = ExtResource("6_2iajs")
animation = &"Idle_Up"
autoplay = "Right"

[node name="GooseSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Background"]
position = Vector2(-141, 389)
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("5_2ab6e")
animation = &"Idle_Right"

[node name="Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tutorial" type="Control" parent="CanvasLayer/Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 662.0
offset_right = -6.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="MoveImage" type="TextureRect" parent="CanvasLayer/Buttons/Tutorial"]
layout_mode = 0
offset_left = 729.0
offset_top = 46.0
offset_right = 971.0
offset_bottom = 244.0
texture = ExtResource("7_6ftc6")

[node name="DashImage" type="TextureRect" parent="CanvasLayer/Buttons/Tutorial"]
layout_mode = 0
offset_left = 733.0
offset_top = 286.0
offset_right = 971.0
offset_bottom = 356.0
texture = ExtResource("8_bqtse")

[node name="MoveLabel" type="Label" parent="CanvasLayer/Buttons/Tutorial"]
layout_mode = 0
offset_left = 991.0
offset_top = 126.0
offset_right = 1110.0
offset_bottom = 188.0
text = "Move"
label_settings = ExtResource("9_o84i5")

[node name="DashLabel" type="Label" parent="CanvasLayer/Buttons/Tutorial"]
layout_mode = 0
offset_left = 991.0
offset_top = 293.0
offset_right = 1109.0
offset_bottom = 355.0
text = "Dash"
label_settings = ExtResource("9_o84i5")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = 139.0
offset_right = 313.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="start_button" type="Button" parent="CanvasLayer/Buttons/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_button")
theme = ExtResource("3_jex88")
theme_override_colors/font_color = Color(0.203922, 0.0352941, 0.0509804, 1)
theme_override_colors/font_pressed_color = Color(1, 0.784314, 0.666667, 1)
theme_override_colors/font_hover_color = Color(0.498039, 0.2, 0, 1)
theme_override_colors/font_focus_color = Color(0.498039, 0.2, 0, 1)
theme_override_styles/normal = ExtResource("7_1ysxi")
theme_override_styles/hover = ExtResource("7_1ysxi")
theme_override_styles/pressed = ExtResource("7_1ysxi")
theme_override_styles/disabled = ExtResource("7_1ysxi")
theme_override_styles/focus = SubResource("StyleBoxTexture_0lqv6")
text = "Start game"

[node name="wiki_button" type="Button" parent="CanvasLayer/Buttons/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start_button")
theme = ExtResource("3_jex88")
theme_override_colors/font_color = Color(0.23, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.992157, 0.776471, 0.658824, 1)
theme_override_colors/font_hover_color = Color(0.498039, 0.2, 0, 1)
theme_override_styles/normal = ExtResource("7_1ysxi")
theme_override_styles/hover = ExtResource("7_1ysxi")
theme_override_styles/pressed = ExtResource("7_1ysxi")
theme_override_styles/disabled = ExtResource("7_1ysxi")
text = "Wiki"

[node name="quit_button" type="Button" parent="CanvasLayer/Buttons/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start_button")
theme = ExtResource("3_jex88")
theme_override_colors/font_color = Color(0.23, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.992157, 0.776471, 0.658824, 1)
theme_override_colors/font_hover_color = Color(0.498039, 0.2, 0, 1)
theme_override_styles/normal = ExtResource("7_1ysxi")
theme_override_styles/hover = ExtResource("7_1ysxi")
theme_override_styles/pressed = ExtResource("7_1ysxi")
theme_override_styles/disabled = ExtResource("7_1ysxi")
text = "Quit  game"

[node name="CreditsButton" type="TextureButton" parent="CanvasLayer/Buttons"]
offset_left = 364.0
offset_top = 608.0
offset_right = 564.0
offset_bottom = 908.0
rotation = 0.598648
texture_normal = ExtResource("2_ago1e")
texture_pressed = ExtResource("11_1th13")
texture_hover = ExtResource("11_1th13")

[node name="WikiContainer" type="Panel" parent="CanvasLayer/Buttons"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="back_button" type="Button" parent="CanvasLayer/Buttons/WikiContainer"]
layout_mode = 2
offset_left = 644.0
offset_top = 917.0
offset_right = 1270.0
offset_bottom = 1026.0
theme_override_colors/font_color = Color(0.203922, 0.0352941, 0.0509804, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.913925, 0.536685, 0.125707, 1)
theme_override_colors/font_focus_color = Color(0.913925, 0.536685, 0.125707, 1)
theme_override_fonts/font = ExtResource("15_50dkx")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("7_1ysxi")
theme_override_styles/hover = ExtResource("7_1ysxi")
theme_override_styles/pressed = ExtResource("7_1ysxi")
theme_override_styles/disabled = ExtResource("7_1ysxi")
text = "Back"

[node name="StartGoosePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wla5a")
volume_db = 23.998

[connection signal="pressed" from="CanvasLayer/Buttons/VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/VBoxContainer/wiki_button" to="." method="_on_wiki_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/WikiContainer/back_button" to="." method="_on_back_button_pressed"]
